--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.socialnexusfacebook"
+    package="com.example.socialnexus"
     android:versionCode="1"
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="8"
+        android:minSdkVersion="11"
         android:targetSdkVersion="18" />
-	<uses-permission 
-	    android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -16,7 +14,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.socialnexusfacebook.MainActivity"
+            android:name="com.example.socialnexus.LoginActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,15 +22,30 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        
         <activity
-        	android:name="com.facebook.LoginActivity"
-        	android:label="@string/title_facebook_login" >
-   		</activity>
-   		 
-        <meta-data 
-            android:name="com.facebook.sdk.ApplicationId" 
-            android:value="@string/app_id"/>
+            android:name="com.example.socialnexus.RegisterActivity"
+            android:label="@string/title_activity_register" >
+        </activity>
+        <activity
+            android:name="com.example.socialnexus.SplashActivity"
+            android:label="@string/title_activity_splash" >
+        </activity>
+        <activity
+            android:name="com.example.socialnexus.AddfacebookActivity"
+            android:label="@string/title_activity_addfacebook" >
+        </activity>
+        <activity
+            android:name="com.example.socialnexus.AddtwitterActivity"
+            android:label="@string/title_activity_addtwitter" >
+        </activity>
+        <activity
+            android:name="com.example.socialnexus.AddgplusActivity"
+            android:label="@string/title_activity_addgplus" >
+        </activity>
+        <activity
+            android:name="com.example.socialnexus.MainActivity"
+            android:label="@string/title_activity_main" >
+        </activity>
     </application>
 
 </manifest>
