--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -4,12 +4,9 @@
     android:versionCode="1"
     android:versionName="1.0" >
 
-    <uses-sdk
-        android:minSdkVersion="4"
-        />
-    
-    <uses-permission
-		android:name="android.permission.INTERNET" />
+    <uses-sdk android:minSdkVersion="4" />
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -17,46 +14,50 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.example.socialnexus.LoginActivity"
-            android:label="@string/app_name" >
+            android:name="com.socialnexus.LLoginActivity"
+            android:label="@string/title_activity_llogin"
+            android:windowSoftInputMode="adjustResize|stateVisible" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-            
         </activity>
         <activity
-            android:name="com.example.socialnexus.RegisterActivity"
-            android:label="@string/title_activity_register" 
-            android:launchMode="singleInstance">            
+            android:name="com.socialnexus.LoginActivity"
+            android:label="@string/app_name" >
+        </activity>
+        <activity
+            android:name="com.socialnexus.RegisterActivity"
+            android:label="@string/title_activity_register"
+            android:launchMode="singleInstance" >
             <intent-filter>
-				<action android:name="android.intent.action.VIEW" />
-				<category android:name="android.intent.category.DEFAULT" />
-				<category android:name="android.intent.category.BROWSABLE" />
-				<data android:scheme="social-nexus-android" />
-			</intent-filter>
+                <action android:name="android.intent.action.VIEW" />
 
-            
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data android:scheme="social-nexus-android" />
+            </intent-filter>
         </activity>
         <activity
-            android:name="com.example.socialnexus.SplashActivity"
+            android:name="com.socialnexus.SplashActivity"
             android:label="@string/title_activity_splash" >
         </activity>
         <activity
-            android:name="com.example.socialnexus.AddfacebookActivity"
+            android:name="com.socialnexus.AddfacebookActivity"
             android:label="@string/title_activity_addfacebook" >
         </activity>
         <activity
-            android:name="com.example.socialnexus.AddtwitterActivity"
+            android:name="com.socialnexus.AddtwitterActivity"
             android:label="@string/title_activity_addtwitter" >
         </activity>
         <activity
-            android:name="com.example.socialnexus.AddgplusActivity"
+            android:name="com.socialnexus.AddgplusActivity"
             android:label="@string/title_activity_addgplus" >
         </activity>
         <activity
-            android:name="com.example.socialnexus.MainActivity"
+            android:name="com.socialnexus.MainActivity"
             android:label="@string/title_activity_main" >
         </activity>
     </application>
