--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,7 +4,9 @@
     android:versionCode="1"
     android:versionName="1.0" >
 
-    <uses-sdk android:minSdkVersion="4" />
+    <uses-sdk
+        android:minSdkVersion="5" 
+        android:targetSdkVersion="11"/>
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -14,9 +16,8 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.socialnexus.LoginActivity"
-            android:label="@string/title_activity_llogin"
-            android:windowSoftInputMode="adjustResize|stateVisible" >
+            android:name="com.socialnexus.MainActivity"
+            android:label="@string/title_activity_main" android:launchMode="singleTask">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -25,24 +26,13 @@
         </activity>
         <activity
             android:name="com.socialnexus.LoginActivity"
-            android:label="@string/app_name" >
+            android:label="@string/title_activity_login"
+            android:windowSoftInputMode="adjustResize|stateVisible" >
         </activity>
         <activity
             android:name="com.socialnexus.RegisterActivity"
             android:label="@string/title_activity_register"
             android:launchMode="singleInstance" >
-            <intent-filter>
-                <action android:name="android.intent.action.VIEW" />
-
-                <category android:name="android.intent.category.DEFAULT" />
-                <category android:name="android.intent.category.BROWSABLE" />
-
-                <data android:scheme="social-nexus-android" />
-            </intent-filter>
-        </activity>
-        <activity
-            android:name="com.socialnexus.SplashActivity"
-            android:label="@string/title_activity_splash" >
         </activity>
         <activity
             android:name="com.socialnexus.AddfacebookActivity"
@@ -55,10 +45,6 @@
         <activity
             android:name="com.socialnexus.AddgplusActivity"
             android:label="@string/title_activity_addgplus" >
-        </activity>
-        <activity
-            android:name="com.socialnexus.MainActivity"
-            android:label="@string/title_activity_main" >
         </activity>
     </application>
 
