--- a/project.properties
+++ b/project.properties
@@ -12,3 +12,5 @@
 
 # Project target.
 target=android-19
+android.library.reference.1=../../FacebookSDK/facebook
+android.library.reference.2=../../Users/KaosuRyoko/Downloads/Archive/library
