--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -21,13 +21,13 @@
             android:launchMode="singleTask" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
             android:name="com.socialnexus.LoginActivity"
             android:label="@string/title_activity_login"
+            android:launchMode="singleTask"
             android:windowSoftInputMode="adjustResize|stateVisible" >
         </activity>
         <activity
@@ -35,19 +35,16 @@
             android:label="@string/title_activity_register"
             android:launchMode="singleTask"
             android:process=":register" >
-        </activity>
-        <activity
-            android:name="com.socialnexus.AddfacebookActivity"
-            android:label="@string/title_activity_addfacebook" >
-        </activity>
-        <activity
-            android:name="com.socialnexus.AddtwitterActivity"
-            android:label="@string/title_activity_addtwitter" >
-        </activity>
-        <activity
-            android:name="com.socialnexus.AddgplusActivity"
-            android:label="@string/title_activity_addgplus" >
-        </activity>
-    </application>
 
+        </activity>
+        <activity 
+			android:name="com.socialnexus.SplashActivity"
+			android:label="@string/title_activity_splash"
+			android:launchMode="singleTask"
+			android:process=":register" >
+			<intent-filter>
+				<data android:scheme="social-nexus-android" />
+			</intent-filter>
+        </activity>        
+    </application>
 </manifest>
